--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "name": "Vaughan Rouesnel",
     "email": "vrouesnel@gmail.com"
   },
+  "version": "0.0.1",
   "dependencies": {
     "mincer": "git://github.com/nodeca/mincer.git#master"
   },
