--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   "version": "0.1.1",
   "dependencies": {
     "mincer": ">= 0.4.1"
+  , "uglify-js": ">= 2.2.1"
+  , "csso": ">= 1.3.6"
   },
   "main": "assets.coffee"
 }
