--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "name": "Vaughan Rouesnel",
     "email": "vrouesnel@gmail.com"
   },
-  "version": "0.1.10",
+  "version": "0.1.10-1",
   "dependencies": {
     "mincer": "git://github.com/vjpr/mincer.git#latest",
     "uglify-js": "~2.3.6",
